log

Thu 14 Mar 2024 02:55:40 PM UTC: 
 exercises.c | 59 +++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 53 insertions(+), 6 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:7: error: variable ‘vector’ set but not used [-Werror=unused-but-set-variable]
   28 |   int vector[size];
      |       ^~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:67:9: error: statement with no effect [-Werror=unused-value]
   67 |   result[size1 + size2];
      |   ~~~~~~^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bf1d5ad
Thu 14 Mar 2024 02:56:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:7: error: variable ‘vector’ set but not used [-Werror=unused-but-set-variable]
   28 |   int vector[size];
      |       ^~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:67:9: error: statement with no effect [-Werror=unused-value]
   67 |   result[size1 + size2];
      |   ~~~~~~^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5f439a6
Thu 14 Mar 2024 03:02:45 PM UTC: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:71:3: error: ‘vector’ undeclared (first use in this function)
   71 |   vector[size1 + size2];
      |   ^~~~~~
exercises.c:71:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
748a643
Thu 14 Mar 2024 03:04:08 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:71:9: error: statement with no effect [-Werror=unused-value]
   71 |   result[size1 + size2];
      |   ~~~~~~^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
67d6c5d
Thu 14 Mar 2024 03:05:12 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|4
total_score: 30/70
cfb99a2
Thu 14 Mar 2024 03:09:23 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
bd718fb
Thu 14 Mar 2024 03:16:53 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
29cfb79
Sat 16 Mar 2024 04:10:59 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e079de2
Sat 16 Mar 2024 04:11:51 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ff8ef00
Sat 16 Mar 2024 04:16:55 AM UTC: 
 exercises.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
 tests:  0|3
total_score: 40/70
8972fdf
